--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
-<meta property="og:title" content="🔥Like🔥">
-<meta property="og:description" content="💥Super💥">
-<meta property="og:image" content="https://img5.goodfon.ru/wallpaper/nbig/9/30/iolochka-pervyi-sneg-osen-kemerovo.jpg">
+<meta property="og:title" content="😁Date prisa y haz clic en el botón si quieres una polla enorme 👉">
+<meta property="og:description" content="💥¡Una noticia increíble para todos los hombres!✅">
+<meta property="og:image" content="https://i.imgur.com/F9XqIfo.png">
   <title>New Promotion</title>
   <meta name="description" content="Promo">
   <meta name="keywords" content="Beauty">
