--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
 <meta property="og:title" content="😁Date prisa y haz clic en el botón si quieres una polla enorme 👉">
 <meta property="og:description" content="💥¡Una noticia increíble para todos los hombres!✅">
-<meta property="og:image" content="https://i.imgur.com/TGkF6n4.png">
+<meta property="og:image" content="https://i.imgur.com/dw5Eo82.jpg">
   <title>New Promotion</title>
   <meta name="description" content="Promo">
   <meta name="keywords" content="Beauty">
